--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   splashscreen: ^1.3.5 
   flutter_launcher_icons: ^0.9.2
+  shared_preferences: ^2.0.8
 
 flutter_icons:
   android: "bank_kalsel"
