--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   splashscreen: ^1.3.5 
   flutter_launcher_icons: ^0.9.2
   shared_preferences: ^2.0.8
+  flutter_webview_plugin: ^0.4.0
 
 flutter_icons:
   android: "bank_kalsel"
