--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   shared_preferences: ^2.0.8
   flutter_webview_plugin: ^0.4.0
+  image_picker: ^0.8.4+4
+  esys_flutter_share: ^1.0.2
 
 flutter_icons:
   android: "bank_kalsel"
