--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_webview_plugin: ^0.4.0
   image_picker: ^0.8.4+4
   esys_flutter_share: ^1.0.2
+  path_provider: 
+  http: ^0.13.4
 
 flutter_icons:
   android: "bank_kalsel"
