--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: 
   http: ^0.13.4
   toast: ^0.1.5
+  sqflite: ^2.0.0+4
+  flutter_slidable: ^0.6.0
 
 flutter_icons:
   android: "bank_kalsel"
